# CSLP

./: .gitignore  README.md
Deliverable_1/: CMakeLists.txt  Canny  Canny.cpp  Display  DisplayVideoRGB.cpp  DisplayVideoRGBorYUV.cpp  Doxyfile  GausAndBlur  GausAndBlur.cpp  Gradients  Gradients.cpp  GrayScale  GrayScale.cpp  HSV_YUV  HSV_YUV.cpp  Histogram  Histogram.cpp  Morph  Morphologic.cpp  Segmentation  Segmentation.cpp  WaterMark  WaterMark.cpp
Deliverable_1/html/: CMakeCache_8txt.html  CMakeLists_8txt.html  Canny_8cpp.html  Canny_8cpp__incl.dot  DisplayVideoRGB_8cpp.html  DisplayVideoRGB_8cpp__incl.dot  DisplayVideoRGBorYUV_8cpp.html  DisplayVideoRGBorYUV_8cpp__incl.dot  GausAndBlur_8cpp.html  GausAndBlur_8cpp__incl.dot  Gradients_8cpp.html  Gradients_8cpp__incl.dot  GrayScale_8cpp.html  GrayScale_8cpp__incl.dot  HSV__YUV_8cpp.html  HSV__YUV_8cpp__incl.dot  Histogram_8cpp.html  Histogram_8cpp__incl.dot  Morphologic_8cpp.html  Morphologic_8cpp__incl.dot  Segmentation_8cpp.html  Segmentation_8cpp__incl.dot  WaterMark_8cpp.html  WaterMark_8cpp__incl.dot  files.html  globals.html  globals_func.html  graph_legend.html  index.html
Deliverable_1/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  searchdata.js
Deliverable_3/: CMakeLists.txt  Doxyfile  Golomb.cpp  TestGolomb.cpp  TestGolombDecode.cpp  TestGolombDecodeN.cpp  TestGolombDecodeT.cpp  TestGolombEncode.cpp
Deliverable_3/html/: CMakeLists_8txt.html  Golomb_8cpp.html  Golomb_8cpp__dep__incl.dot  Golomb_8cpp__incl.dot  RBitStream_8cpp.html  RBitStream_8cpp__dep__incl.dot  TestGolombDecodeN_8cpp.html  TestGolombDecodeN_8cpp__incl.dot  TestGolombDecodeT_8cpp.html  TestGolombDecodeT_8cpp__incl.dot  TestGolombDecode_8cpp.html  TestGolombDecode_8cpp__incl.dot  TestGolombEncode_8cpp.html  TestGolombEncode_8cpp__incl.dot  WBitStream_8cpp.html  WBitStream_8cpp__dep__incl.dot  annotated.html  classGolomb-members.html  classGolomb.html  classRBitStream-members.html  classRBitStream.html  classWBitStream-members.html  classWBitStream.html  classes.html  files.html  functions.html  functions_func.html  globals.html  globals_func.html  graph_legend.html  index.html
Deliverable_5/: CMakeLists.txt  Doxyfile  Golomb.cpp  LosslessHybrid.cpp  LosslessHybridEncoder.cpp  Notas.txt  Preditor.cpp  ResultsMaker.cpp  TestDecode.cpp  TestEncode.cpp
Deliverable_5/html/: CMakeLists_8txt.html  Golomb_8cpp.html  Golomb_8cpp__dep__incl.dot  LosslessEncoder_8cpp__dep__incl.dot  LosslessHybridEncoder_8cpp.html  LosslessHybridEncoder_8cpp__incl.dot  LosslessHybrid_8cpp.html  LosslessHybrid_8cpp__dep__incl.dot  Notas_8txt.html  Preditor_8cpp.html  Preditor_8cpp__dep__incl.dot  RBitStream_8cpp.html  RBitStream_8cpp__dep__incl.dot  RBitStream_8cpp__incl.dot  ResultsMaker_8cpp.html  ResultsMaker_8cpp__incl.dot  TestDecode_8cpp.html  TestEncode_8cpp.html  TestEncode_8cpp__incl.dot  TestGol_8cpp__incl.dot  WBitStream_8cpp.html  WBitStream_8cpp__dep__incl.dot  annotated.html  classGolomb-members.html  classGolomb.html  classLosslessEncoder.html  classLosslessHybrid-members.html  classLosslessHybrid.html  classLosslessHybridEncoder-members.html  classLosslessHybridEncoder.html  classPreditor-members.html  classPreditor.html  classRBitStream-members.html  classRBitStream.html  classWBitStream-members.html  classWBitStream.html  classes.html  files.html  functions.html  functions_func.html  (+6 more)
(+249 files in other folders)
