cmake_minimum_required(VERSION 2.8)

project( Example )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( Display DisplayVideoRGBorYUV.cpp )
add_executable( WaterMark WaterMark.cpp )
add_executable( HSV_YUV HSV_YUV.cpp )
add_executable( Histogram Histogram.cpp )
add_executable( GrayScale GrayScale.cpp )
add_executable( GausAndBlur GausAndBlur.cpp )
add_executable( Gradients Gradients.cpp )
add_executable( Canny Canny.cpp )
add_executable( Segmentation Segmentation.cpp )
add_executable( Morph Morphologic.cpp )
target_link_libraries( Display ${OpenCV_LIBS} )
target_link_libraries( WaterMark ${OpenCV_LIBS} )
target_link_libraries( HSV_YUV ${OpenCV_LIBS} )
target_link_libraries( Histogram ${OpenCV_LIBS} )
target_link_libraries( GrayScale ${OpenCV_LIBS} )
target_link_libraries( GausAndBlur ${OpenCV_LIBS} )
target_link_libraries( Gradients ${OpenCV_LIBS} )
target_link_libraries( Canny ${OpenCV_LIBS} )
target_link_libraries( Segmentation ${OpenCV_LIBS} )
target_link_libraries( Morph ${OpenCV_LIBS} )
